# UC-StudentManager

./: CMakeLists.txt  CMakePresets.json  README.md  alunos_entre_medias.txt  main.c
data/: README.md  estudantes.txt  file.txt  situacao_Escolar_Estudantes.txt
export/: README.md
libs/data/: db.c  db.h  files.c  files.h  txt_files.c  txt_files.h
libs/env/: aluno.c  aluno.h  student.c  student.h
libs/style/: color.c  colors.h  menu.c  menu.h  program.c  program.h  tools.c  tools.h
libs/utils/: string_util.c  string_util.h
